Favicons and web app manifest added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="author" content="Educação Pindamonhangaba" />
     <meta name="theme-color" content="#1ba3c6" />
     <meta name="google" content="notranslate" />
-    <link rel="manifest" href="/manifest.json" />
-
-    
-    
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Escolas" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
